<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/rb_foodType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton android:id="@+id/radio_veggie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/veggie"
            android:textColor="@color/colorVeggie"
            android:checked="true"/>

        <RadioButton android:id="@+id/radio_nonVeggie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/non_veggie"
            android:textColor="@color/colorNonVeggie" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_foodName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/hint_menu_item_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/rb_foodType"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:text="@string/save"
        android:textColor="@color/colorAccent"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/et_foodName"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/et_foodName"
        app:layout_constraintRight_toLeftOf="@id/btn_save" />

</androidx.constraintlayout.widget.ConstraintLayout>
