...
        android:background="#616161"
        app:layout_constraintTop_toBottomOf="@id/checkbox_nonVeggie"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine"
        app:layout_constraintBottom_toTopOf="@id/btn_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
...
