<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mi_Add"
        app:showAsAction="always"
        android:title="@string/add">
    </item>
</menu>